--- a/frontend/src/css/adoptar/filtrar.module.css
+++ b/frontend/src/css/adoptar/filtrar.module.css
@@ -11,7 +11,7 @@
 
 .filtrar__input {
 	height: 40px;
-	background-color: #d3cdcd;
+	background-color: #ffffff;
 	outline: none;
 	border: 1px solid #000;
 	border-bottom: none;
@@ -53,7 +53,7 @@
 
 .filter__option::-webkit-scrollbar {
 	width: 8px;
-	background-color: #de341d88;
+	background-color: #f5000088;
 }
 
 .filter__option::-webkit-scrollbar-thumb {
@@ -63,14 +63,14 @@
 
 .filter__option>span {
 	padding: 12px 20px;
-	background-color: #D9D9D9;
+	background-color: #ffffff;
 	font-family: 'Roboto';
 	font-style: normal;
 	font-weight: 800;
 	font-size: 18px;
 	line-height: 23px;
 	letter-spacing: 0.02em;
-	color: #343A40;
+	color: #000000;
 	border-bottom: 1px solid #000;
 }
 
