--- a/frontend/src/css/Perdidos/perdidosTarjeta.module.css
+++ b/frontend/src/css/Perdidos/perdidosTarjeta.module.css
@@ -46,7 +46,7 @@
 
 .perdidosTarjeta__h3 {
 	color: #fff;
-	background-color: #de341d99;
+	background-color: #DE341D;
 	padding: 7px 20px;
 	border-radius: 5px;
 }
