--- a/frontend/src/css/nav/BurgerMenu/BurgerMenu.module.css
+++ b/frontend/src/css/nav/BurgerMenu/BurgerMenu.module.css
@@ -3,18 +3,18 @@
 }
 .burger_menu__items li {
   list-style-type: none;
-  padding: 8px 0;
   border-bottom: 2px solid #000;
   width: 100%;
   display: flex;
   justify-content: center;
 }
 .burger_menu__items a {
-  margin: 15px;
   color: #000;
   text-decoration: none;
   font-size: 18px;
   font-weight: 600;
+  display: block;
+  padding: 27px 100%;
 }
 .burger_menu__items li:hover {
   background-color: #DE341D;
