--- a/frontend/src/css/nav/nav.module.css
+++ b/frontend/src/css/nav/nav.module.css
@@ -44,15 +44,12 @@
 	/* justify-content: center; */
 	align-items: center;
 	gap: 1.5rem;
-
 }
 
 .nav__separador{
 	height: 24px;
 	border: 1px solid #000;
-	/* padding: 20px; */
-	/* margin: 0; */
-	/* padding-bottom: .6rem; */
+	margin-right: 16px;
 }
 
 
