--- a/frontend/src/css/nav/nav.module.css
+++ b/frontend/src/css/nav/nav.module.css
@@ -1,22 +1,31 @@
 .nav{
-	background-color: white;
+	position: fixed;
+	top: 0;
+	width: 100vw;
+}
+
+.nav-container {
+	background-color: #fff/*rgb(210, 19, 23)*/;
 	display: flex;
 	align-items: center;
 	justify-content: space-evenly;
 	user-select: none;
 	/* width: 100%; */
 	/* box-shadow: 0 0px 0.5rem; */
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+	box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 	height: 5rem;
+	/*width: 100vw;*/
 	z-index: -1;
 }
 
 .nav__logo-contenedor {
 	display: flex;
+	margin-left: clamp(5px, 10%, 10px);
+	margin-right: clamp(10px, 15%, 100px);
 }
 
 .logo {
-	width: 160px;
+	width: 80px;
 }
 
 .nav__contenedor {
@@ -26,7 +35,7 @@
 	gap: 30px;
 }
 
-.nav__contenedor-botones{
+.nav__contenedor-botones {
 	height: 100%;
 	width: 100%;
 	/* width: 60%; */
@@ -34,9 +43,11 @@
 	align-items: center;
 	justify-content: center;
 	gap: .7rem;
+	transform: translateX(clamp(-30px, -10%, -80px));
+	margin-right: clamp(1px, 10%, 1px);
 }
 
-.nav__contenedor-elementos{
+.nav__contenedor-elementos {
 	height: 100%;
 	width: auto;
 	/* min-width: 20vw; */
@@ -44,9 +55,10 @@
 	/* justify-content: center; */
 	align-items: center;
 	gap: 1.5rem;
+
 }
 
-.nav__separador{
+.nav__separador {
 	height: 24px;
 	border: 1px solid #000;
 	margin-right: 16px;
@@ -55,30 +67,33 @@
 
 /* Diseño responsive */
 
-@media (max-width: 1400px){
+@media (max-width: 1400px) {
 	.nav__contenedor {
 		gap: 26px;
 	}
+
 	.nav__contenedor-botones {
 		gap: 6px;
 	}
 }
 
-@media (max-width: 1250px){
-	.nav {
+@media (max-width: 1250px) {
+	.nav-container {
 		justify-content: space-between;
 		padding: 0px 60px;
 	}
+
 	.nav__contenedor-botones {
 		display: none;
 	}
+
 	.nav__separador {
 		display: none;
 	}
 }
 
 @media (max-width: 1024px) {
-	.nav__contenedor-botones{
+	.nav__contenedor-botones {
 		width: 30%;
 		gap: .2rem;
 	}
@@ -86,13 +101,17 @@
 
 @media (max-width: 768px) {
 	.nav {
+		width: 99vw;
+	}
+	.nav-container {
 		padding: 0 20px;
 	}
+
 	.nav__contenedor-botones {
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
-		position:absolute;
+		position: absolute;
 		top: 80px;
 		right: -100vw;
 		visibility: hidden;
@@ -102,14 +121,20 @@
 		height: calc(100vh - 80px);
 	}
 
-	.show_nav .nav__contenedor-botones{
-			width: 100vw;
-			right: 0;
-			visibility: visible;
+	.show_nav .nav__contenedor-botones {
+		width: 100vw;
+		right: 0;
+		visibility: visible;
 	}
 
 	.nav__contenedor-boton {
 		display: none;
+	}
+}
+
+@media (max-width: 545px) {
+	.nav-container {
+		padding: 0 20px;
 	}
 }
 
@@ -118,7 +143,7 @@
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
-		position:absolute;
+		position: absolute;
 		top: 70px;
 		right: -100vw;
 		visibility: hidden;
@@ -127,33 +152,41 @@
 		width: 100%;
 		height: calc(100vh - 70px);
 	}
-	.show_nav .nav__contenedor-botones{
-			width: 100vw;
-			right: 0;
-			visibility: visible;
+
+	.show_nav .nav__contenedor-botones {
+		width: 100vw;
+		right: 0;
+		visibility: visible;
 	}
 }
 
 @media (max-width: 320px) {
+
+	.nav-container {
+		justify-content:  center;
+		padding: 0px 60px;
+	}
+
 	.nav__contenedor-botones {
-			flex-direction: column;
-			justify-content: center;
-			align-items: center;
-			position:absolute;
-			top: 70px;
-			left: 2;
-			right: -100vw;
-			bottom: 0;
-			padding: 2rem;
-			visibility: hidden;
-			background-color: white;
-			border-top: 1px solid black;
-			width: 100%;
-			height: calc(100vh - 77px);
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		position: absolute;
+		top: 70px;
+		left: 2;
+		right: -100vw;
+		bottom: 0;
+		padding: 2rem;
+		visibility: hidden;
+		background-color: white;
+		border-top: 1px solid black;
+		width: 100%;
+		height: calc(100vh - 77px);
 	}
-	.show_nav .nav__contenedor-botones{
-			width: 100vw;
-			right: 0;
-			visibility: visible;
+
+	.show_nav .nav__contenedor-botones {
+		width: 100vw;
+		right: 0;
+		visibility: visible;
 	}
-} 
+}
