--- a/frontend/src/css/nav/nav.module.css
+++ b/frontend/src/css/nav/nav.module.css
@@ -25,7 +25,9 @@
 }
 
 .logo {
-	width: 80px;
+	width: 20vw;
+	max-width: 200px;
+	min-width: 100px;
 }
 
 .nav__contenedor {
@@ -136,6 +138,9 @@
 	.nav-container {
 		padding: 0 20px;
 	}
+	.nav__contenedor-elementos button{
+		display: none;
+	}
 }
 
 @media (max-width: 375px) {
@@ -164,7 +169,8 @@
 
 	.nav-container {
 		justify-content:  center;
-		padding: 0px 60px;
+		/*padding: 0px 60px;*/
+		padding: 0;
 	}
 
 	.nav__contenedor-botones {
