--- a/frontend/src/css/nav/nav.module.css
+++ b/frontend/src/css/nav/nav.module.css
@@ -1,11 +1,14 @@
-.nav{
+.nav {
 	position: fixed;
 	top: 0;
 	width: 100vw;
+	transition: 0.4s;
 }
 
 .nav-container {
-	background-color: #fff/*rgb(210, 19, 23)*/;
+	background-color: #fff
+		/*rgb(210, 19, 23)*/
+	;
 	display: flex;
 	align-items: center;
 	justify-content: space-evenly;
@@ -105,6 +108,7 @@
 	.nav {
 		width: 99vw;
 	}
+
 	.nav-container {
 		padding: 0 20px;
 	}
@@ -138,7 +142,8 @@
 	.nav-container {
 		padding: 0 20px;
 	}
-	.nav__contenedor-elementos button{
+
+	.nav__contenedor-elementos button {
 		display: none;
 	}
 }
@@ -168,7 +173,7 @@
 @media (max-width: 320px) {
 
 	.nav-container {
-		justify-content:  center;
+		justify-content: center;
 		/*padding: 0px 60px;*/
 		padding: 0;
 	}
