--- a/frontend/src/css/adopciones/adopcionesSlider.module.css
+++ b/frontend/src/css/adopciones/adopcionesSlider.module.css
@@ -11,8 +11,8 @@
   width: 50px;
   height: 50px;
   /* background-color: #fff; */
-  border-radius: 50%;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  /* border-radius: 50%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); */
   display: flex;
   justify-content: center;
   align-items: center;
