Fix Loading Screen en la seccion home

--- a/frontend/src/css/home/loading.module.css
+++ b/frontend/src/css/home/loading.module.css
@@ -1,52 +1,53 @@
-@-webkit-keyframes slide-out-top {
+@-webkit-keyframes slide-out-bck-center {
   0% {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
     opacity: 1;
   }
   100% {
-    -webkit-transform: translateY(-1000px);
-            transform: translateY(-1000px);
+    -webkit-transform: translateZ(-1100px);
+            transform: translateZ(-1100px);
     opacity: 0;
   }
 }
-@keyframes slide-out-top {
+@keyframes slide-out-bck-center {
   0% {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
     opacity: 1;
   }
   100% {
-    -webkit-transform: translateY(-1000px);
-            transform: translateY(-1000px);
+    -webkit-transform: translateZ(-1100px);
+            transform: translateZ(-1100px);
     opacity: 0;
   }
 }
 
-@-webkit-keyframes slide-in-left {
+@-webkit-keyframes slide-in-fwd-center {
   0% {
-    -webkit-transform: translateX(-1000px);
-            transform: translateX(-1000px);
+    -webkit-transform: translateZ(-1400px);
+            transform: translateZ(-1400px);
     opacity: 0;
   }
   100% {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
     opacity: 1;
   }
 }
-@keyframes slide-in-left {
+@keyframes slide-in-fwd-center {
   0% {
-    -webkit-transform: translateX(-1000px);
-            transform: translateX(-1000px);
+    -webkit-transform: translateZ(-1400px);
+            transform: translateZ(-1400px);
     opacity: 0;
   }
   100% {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
     opacity: 1;
   }
 }
+
 
 .loading__container {
   display: flex;
@@ -58,13 +59,13 @@
   height: 100%;
   z-index: 1000;
   top: 0;
-  -webkit-animation: slide-out-top 1s ease-out 2s both;
-          animation: slide-out-top 1s ease-out 2s both;
+  -webkit-animation: slide-out-bck-center 0.5s ease-out 2s both;
+	        animation: slide-out-bck-center 0.5s ease-out 2s both;
 }
 
 .loading__img {
   position: absolute;
   width: 600px;
-  -webkit-animation: slide-in-left 1s both;
-	        animation: slide-in-left 1s both;
+  -webkit-animation: slide-in-fwd-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s both;
+	        animation: slide-in-fwd-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s both;
 }
