--- a/frontend/src/css/home/home.module.css
+++ b/frontend/src/css/home/home.module.css
@@ -62,7 +62,7 @@
     background-position: 50%;
   } */
   .header__section {
-    width: 600px;
+    /* width: 600px; */
     align-items: center;
     padding: 0;
     left: 50%;
