--- a/frontend/src/css/home/loading.module.css
+++ b/frontend/src/css/home/loading.module.css
@@ -57,6 +57,7 @@
   background-color: #DE341D;
   width: 100%;
   height: 100%;
+  padding-bottom: 100%;
   z-index: 1000;
   top: 0;
   -webkit-animation: slide-out-bck-center 0.5s ease-out 2s both;
@@ -65,7 +66,9 @@
 
 .loading__img {
   position: absolute;
-  width: 600px;
+  max-width: 600px;
+  min-width: 300px;
+  padding: 60px;
   -webkit-animation: slide-in-fwd-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s both;
 	        animation: slide-in-fwd-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s both;
 }
