Nuevo menu para el filtro de adopciones

--- a/frontend/src/css/adoptar/filtrar.module.css
+++ b/frontend/src/css/adoptar/filtrar.module.css
@@ -1,4 +1,4 @@
-.filtrar {
+/* .filtrar {
 	position: relative;
 	display: flex;
 	width: 250px;
@@ -43,7 +43,7 @@
 
 .filter__option {
 	position: relative;
-	display: flex; /* Change */
+	display: flex; /* Change */ /**
 	flex-direction: column;
 	height: 0;
 	border: 1px solid #000;
@@ -91,4 +91,93 @@
 	right: 15px;
 	top: 15px;
 	transition: transform .6s;
+} */
+
+
+.dropdown__container{
+	display: flex;
+	justify-content: center;
+	position: relative;
+	margin: 10px 0 120px;
+}
+.dropdown {
+	position: absolute;
+  width: 220px;
+  border: 2px solid #adb5bd;
+ 	background: #FFF;
+	border-radius: 4px;
+}
+
+.dropdown__text {
+	padding: 10px 16px;
+	cursor: pointer;
+	height: auto;
+}
+
+.dropdown__text:hover {
+ 	background: #e9ecef;
+}
+
+.dropdown__text:after {
+  content: "";
+  transition: all .3s;
+  border: solid #DE341D;
+  border-width: 0 2px 2px 0;
+	float: right;
+	margin-top: 8px;
+	margin-right: 6px;
+  padding: 5px;
+  transform: rotate(-135deg);
+  -webkit-transform: rotate(-135deg);
+	opacity: 0.8;
+}
+
+.dropdown.active .dropdown__text:after {
+	margin-top:1px;
+	transform: rotate(45deg);
+	-webkit-transform: rotate(45deg);
+
+}
+
+.dropdown__items {
+	visibility: hidden;
+	opacity: 0;
+	max-height: 0px;
+	transition: max-height 0.6s ease;
+	width: 100%;
+	margin: 0 auto;
+}
+
+
+.dropdown.active .dropdown__items {
+ 	visibility: visible;
+  border-top: 1px solid #666;
+	height: auto;
+ 	max-height: 84px;
+  opacity: 1;
+ 	transition: max-height 0.5s, opacity 2s, visibility 3s ease;
+	overflow-y: scroll;
+}
+.dropdown.active .dropdown__items::-webkit-scrollbar {
+	width: 8px;
+	/* background-color: #f5000088; */
+	background-color: #e9ecef;
+}
+
+.dropdown.active .dropdown__items::-webkit-scrollbar-thumb {
+	border-radius: 4px;
+	background-color: #adb5bd;
+}
+
+.dropdown__item {
+  cursor: pointer;
+ 	padding: 10px 18px;
+}
+
+.dropdown__item:not(:last-child) {
+  border-bottom: 1px solid #666;
+}
+
+.dropdown__item:hover {
+ 	background: #e9ecef;
 }
