--- a/frontend/src/css/home/home.module.css
+++ b/frontend/src/css/home/home.module.css
@@ -114,13 +114,28 @@
 }
 
 .adopciones {
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.323) 0 100%), url(../../iconos/imagenes\ recursos/adopciones_bg.jpg);
+  background-color: #000;
+  margin: 2rem 0;
+  padding: 2rem 0;
+  position: relative;
+}
+.adopciones::before {
+  content: "";
+  position: absolute;
+  background-image: url(../../iconos/imagenes\ recursos/adopciones-bg.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-color: #fffa;
-  margin: 2rem 0;
-  padding: 2rem 0;
+  background-position: 50% 0%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 0.6;
+}
+
+.adopciones button, p {
+  position: relative;
 }
 
 /* .adopciones>div {
