--- a/src/containers/pages/Home/styles.module.css
+++ b/src/containers/pages/Home/styles.module.css
@@ -1,24 +1,19 @@
 .header {
-  display: flex;
-  height: 92vh;
   width: 100%;
-  background-color: #000;
+  height: 92vh;
   position: relative;
+  background-color: #000;
 }
-.header::before {
-  background-image: url(/icons/imagenes\ recursos/img-home.jpg);
-  background-size: cover;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  content: "";
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
-  opacity: 0.6;
-  background-color: green;
+
+.header__slider--img {
+  width: 100%;
+  height: 92vh;
+  object-fit: cover;
 }
+.header__slider--img {
+  opacity: 0.8;
+}
+
 
 .header__section {
   display: flex;
@@ -26,8 +21,9 @@
   justify-content: center;
   gap: 2rem;
   margin: 0;
-  padding-left: 100px;
-  position: relative;
+  padding-left: 160px;
+  position: absolute;
+  top: 260px;
 }
 
 .header__logo {
@@ -51,28 +47,31 @@
 }
 
 @media (max-width: 1250px){
-  .header {
-    justify-content: center;
-  }
   .header__section {
-    padding: 0;
-  }
-}
-@media (max-width: 1000px){
-  .header {
-    justify-content: center;
-  }
-  .header::before {
-    background-position: 50%;
-  }
-  .header__section {
-    align-items: center;
+    padding-left: 100px;
   }
   .header__logo {
     width: 500px;
   }
   .header__title {
     font-size: 36px;
+  }
+}
+@media (max-width: 1000px){
+  /* .header::before {
+    background-position: 50%;
+  } */
+  .header__section {
+    max-width: 600px;
+    min-width: 300px;
+    align-items: center;
+    padding: 0;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .header__title {
+    font-size: 32px;
+    text-align: center;
   }
 }
 @media (max-width: 768px){
@@ -83,32 +82,60 @@
     font-size: 34px;
     text-align: center;
   }
+  .header__buttons {
+    gap: 40px;
+  }
 }
 @media (max-width: 600px){
   .header__section {
     padding: 0 10px;
   }
   .header__logo {
-    width: 100%;
-    max-width: 360px;
-    min-width: 200px;
+    width: 300px;
   }
   .header__title {
-    font-size: 30px;
+    font-size: 28px;
+    /* width: 60%; */
   }
   .header__buttons {
-    gap: 40px;
+    gap: 30px;
+  }
+}
+@media (max-width: 400px){
+  .header__logo {
+    width: 260px;
+  }
+  .header__title {
+    font-size: 24px;
+  }
+  .header__buttons {
+    gap: 10px;
   }
 }
 
 .adopciones {
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.323) 0 100%), url(/icons/imagenes\ recursos/adopciones_bg.jpg);
+  background-color: #000;
+  margin: 2rem 0;
+  padding: 2rem 0;
+  position: relative;
+}
+.adopciones::before {
+  content: "";
+  position: absolute;
+  background-image: url(../../../../public/icons/imagenes\ recursos/adopciones-bg.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-color: #fffa;
-  margin: 2rem 0;
-  padding: 2rem 0;
+  background-position: 50% 0%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 0.6;
+}
+
+.adopciones button, p {
+  position: relative;
 }
 
 /* .adopciones>div {
