--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -1,106 +1,142 @@
 .footer__container {
-	position: relative;
-	background-color: #d9dbde;
+	/* width: 100%; */
+	height: 600px;
+	background-color: #FFF;
 	display: flex;
-	justify-content: space-between;
-	align-items: flex-start;
-	padding: 40px 30px 150px 30px;
-	box-shadow: 0px -10px 10px 0px #00000040;
-	gap: 0 30px;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	gap: 50px;
+	font-weight: 700;
+	color: #343a40;
+	padding: 0 40px;
 }
 
-.footer>section {
-	margin: 0 20px;
-	padding: 0;
+.footer__logo {
+	height: 80px;
 }
 
-section>* {
+.footer__text {
 	margin: 0;
-	padding: 0;
 }
 
-.footer__huellas {
-	position: absolute;
-	left: 0;
-	bottom: 25px;
-	width: 100%;
-}
-
-.sectionTwo__container {
+.footer__contact-container {
 	display: flex;
-	justify-content: space-between;
-	gap: 30px;
+	flex-direction: column;
+	align-items: center;
+	gap: 20px;
+}
+.footer__contact-title {
+	margin: 0;
+	font-size: 20px;
+}
+.footer__contact {
+	display: flex;
+	gap: 80px;
+}
+.footer__contact--type {
+	display: flex;
+	align-items: center;
+	gap: 6px;
+}
+
+.footer__contact--img {
+	height: 20px;
+}
+
+.footer__contact--text {
+	margin: 0;
+}
+
+.footer__social {
+	display: flex;
+	gap: 40px;
+}
+.footer__social--icon {
+	height: 40px;
+}
+
+.footer__line {
+	width: 70%;
+	height: 2px !important;
+	border: 2px;
+	background-color: #6c757d !important;
+	margin: -20px 0;
+	opacity: 0.6;
+}
+.footer__line--top {
+	width: 100%;
+	margin: 100px 0 10px;
+}
+
+.footer__rights {
+	display: flex;
+	gap: 10px;
+	font-size: 16px;
+}
+.footer__rights p {
+	margin: 0;
+}
+.footer__rights a {
+	color: #343a40;
+}
+.footer__rights a:hover {
+	text-decoration: underline;
 }
 
 
-/* Diseño responsive */
-
-@media (max-width: 320px) {
-
-	.footer__container {
-		position: relative;
-		display: flex;
-		flex-direction: column;
+@media (max-width: 1050px){
+	.footer__text {
+		width: 80%;
+		text-align: center;
 	}
-
 }
-
-@media (max-width: 375px) {
-
-	.footer__container {
-		position: relative;
-		display: flex;
-		flex-direction: column;
-	}
-
-}
-
-@media (max-width: 768px) {
-
-	.footer__container {
-		position: relative;
-		display: flex;
-		flex-wrap: wrap;
-		align-items: flex-start;
-		justify-content: space-around;
-	}
-
-	.sectionTwo__container {
-		width: auto;
-		display: flex;
-		justify-content: space-between;
-	}
-
-}
-
-@media (max-width: 1024px) {
-
-	.footer__container {
-		position: relative;
-		display: flex;
-		flex-wrap: wrap;
-		align-items: flex-start;
-		justify-content: space-around;
-	}
-
-	.sectionTwo__container {
-		display: flex;
-		justify-content: space-between;
-	}
-
-}
-
-@media (max-width: 900px) {
-	.sectionTwo__container {
+@media (max-width: 800px){
+	.footer__text {
 		width: 100%;
-		justify-content: space-around;
-		margin: 50px 0;
+		text-align: center;
+	}
+	.footer__contact {
+		gap: 60px;
 	}
 }
-
-@media (max-width: 550px){
-	.sectionTwo__container {
+@media (max-width: 600px){
+	.footer__logo {
+		height: 70px;
+	}
+	.footer__contact {
+		gap: 40px;
+	}
+	.footer__social {
+		gap: 30px;
+	}
+	.footer__social--icon {
+		height: 36px;
+	}
+	.footer__rights {
+		display: flex;
+		gap: 10px;
+		font-size: 14px;
+	}
+}
+@media (max-width: 500px){
+	.footer__container {
+		padding: 20px 10px;
+	}
+	.footer__contact {
 		flex-direction: column;
+		align-items: center;
+		gap: 20px;
+	}
+	.footer__social {
+		gap: 20px;
+	}
+	.footer__rights {
+		flex-direction: column;
+		align-items: center;
+		gap: 10px;
+	}
+	.footer__rights--bar {
+		display: none;
 	}
 }
-
