Fix imports imagenes

--- a/src/containers/pages/Home/styles.module.css
+++ b/src/containers/pages/Home/styles.module.css
@@ -122,7 +122,7 @@
 .adopciones::before {
   content: "";
   position: absolute;
-  background-image: url(../../../../public/icons/imagenes\ recursos/adopciones-bg.jpg);
+  background-image: url(/icons/imagenes\ recursos/adopciones-bg.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
