--- a/src/containers/pages/Home/styles.module.css
+++ b/src/containers/pages/Home/styles.module.css
@@ -1,19 +1,26 @@
 .header {
   width: 100%;
-  height: 92vh;
+  height: calc(100vh - 5rem); /* El 100% de la pantalla menos la altura del nav */
   position: relative;
   background-color: #000;
+  overflow: hidden;
+}
+
+.header__slider {
+  position: relative;
+  overflow: hidden;
 }
 
 .header__slider--img {
   width: 100%;
-  height: 92vh;
+  height: calc(100vh - 5rem);
   object-fit: cover;
-}
-.header__slider--img {
   opacity: 0.8;
 }
 
+.slider__img--two {
+  margin-left: 400px;
+}
 
 .header__section {
   display: flex;
@@ -23,7 +30,7 @@
   margin: 0;
   padding-left: 160px;
   position: absolute;
-  top: 260px;
+  top: 220px;
 }
 
 .header__logo {
@@ -46,6 +53,65 @@
   margin-top: 20px;
 }
 
+.header__slider--overlay {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  -webkit-clip-path: polygon(0 0, 52% 0, 44% 100%, 0% 100%);
+  clip-path: polygon(0 0, 52% 0, 44% 100%, 0% 100%);
+  background-color: #252422;
+  width: 100%;
+  height: calc(100vh - 5rem);
+  position: absolute;
+  top: 0;
+}
+.header__info {
+  width: 38%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  font-weight: 700;
+  margin-left: 80px;
+  gap: 20px;
+}
+.header__info-heading {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+.header__info--img {
+  height: 100px;
+}
+.header__info--title {
+  font-size: 48px;
+  color: #DE341D;
+}
+
+.header__info--text {
+  color: #FFF;
+  font-size: 30px;
+  text-align: center;
+}
+
+@media (max-width: 1500px){
+  .header__slider--overlay {
+    -webkit-clip-path: polygon(0 0, 56% 0, 48% 100%, 0% 100%);
+    clip-path: polygon(0 0, 56% 0, 48% 100%, 0% 100%);
+  }
+  .slider__img--three {
+    margin-left: 60px;
+  }
+  .header__info {
+    width: 40%;
+  }
+  .header__info--img {
+    height: 90px;
+  }
+  .header__info--title {
+    font-size: 40px;
+  }
+}
 @media (max-width: 1250px){
   .header__section {
     padding-left: 100px;
@@ -57,10 +123,32 @@
     font-size: 36px;
   }
 }
+@media (max-width: 1200px){
+  .header__slider--overlay {
+    -webkit-clip-path: polygon(0 0, 60% 0, 52% 100%, 0% 100%);
+    clip-path: polygon(0 0, 60% 0, 52% 100%, 0% 100%);
+  }
+  .slider__img--three {
+    margin-left: 80px;
+  }
+  .header__info {
+    width: 44%;
+    margin-left: 60px;
+  }
+  .header__info-heading {
+    gap: 20px;
+  }
+  .header__info--img {
+    height: 80px;
+  }
+  .header__info--title {
+    font-size: 36px;
+  }
+  .header__info--text {
+    font-size: 26px;
+  }
+}
 @media (max-width: 1000px){
-  /* .header::before {
-    background-position: 50%;
-  } */
   .header__section {
     max-width: 600px;
     min-width: 300px;
@@ -69,9 +157,37 @@
     left: 50%;
     transform: translateX(-50%);
   }
+  .header__slider--overlay {
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+    background-color: transparent;
+  }
+  .header__info {
+    width: 100%;
+    margin: 0;
+  }
+  .header__info--img {
+    height: 70px;
+  }
   .header__title {
     font-size: 32px;
     text-align: center;
+  }
+  .slider__img--two {
+    margin: 0px;
+    object-position: 20% 50%;
+  }
+  .slider__img--three {
+    margin: 0px;
+  }
+  .header__info--title {
+    color: #FFF;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+  }
+  .header__info--text {
+    width: 60%;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+    font-weight: 500;
   }
 }
 @media (max-width: 768px){
@@ -99,6 +215,34 @@
   }
   .header__buttons {
     gap: 30px;
+  }
+
+  .slider__img--two {
+    object-position: 40% 50%;
+  }
+  .header__info--img {
+    height: 60px;
+  }
+  .header__info--title {
+    font-size: 32px;
+  }
+  .header__info--text {
+    font-size: 22px;
+    width: 66%;
+  }
+}
+@media (max-width: 500px){
+  .header__info-heading {
+    gap: 12px;
+  }
+  .header__info--img {
+    height: 50px;
+  }
+  .header__info--title {
+    font-size: 28px;
+  }
+  .header__info--text {
+    font-size: 21px;
   }
 }
 @media (max-width: 400px){
