--- a/src/containers/pages/Home/components/TarjetaDestacada/styles.module.css
+++ b/src/containers/pages/Home/components/TarjetaDestacada/styles.module.css
@@ -1,34 +1,62 @@
+.card__container {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  width: 220px;
+  min-height: 220px;
+  padding: 16px;
+  margin-bottom: 170px;
+}
+
 .card {
   width: 220px;
   height: 220px;
-  padding: 15px 15px 15px 45px;
-  /* background: linear-gradient(120deg, #de523f, #ffffff 100%); */
+  padding: 16px;
   background-color: rgba(238, 238, 238, 0.73);
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-direction: column;
   border-radius: 8px;
   z-index: 1;
-  transition: all 400ms ease-in-out;
+  transition: all .6s;
   overflow: hidden;
-  color: #ffffff;
+  color: #FFF;
+  position: absolute;
 }
 
 .card:hover {
-  width: 400px;
-  transition: all 400ms ease-in-out;
-  background-color: #de523f;
+  padding-bottom: 190px;
+  transition: all .6s;
+  background-color: #e3e3e3;
+  color: #111111;
 }
 
-  .card:hover h3{
-  font-size: 23px;
+.card img {
+  transition: all .6s;
 }
-.card:hover p{
-  font-size: 25px;
+
+.card:hover img {
+  width: 100%;
+  border-radius: 10px;
+  transition: all .6s;
+}
+
+.card:hover p {
+  font-size: 26px;
+  margin: 0;
+  padding: 0;
+  transition: all .6s;
+  background-color: transparent;
+}
+
+.card:hover h3{
+  font-size: 20px;
+  margin: 0;
 }
 
 .cardNoExtended {
-  height: 100%;
+  /* height: 100%; */
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -36,19 +64,23 @@
 }
 
 .cardNoExtended>p {
-  margin: 0;
   font-size: 18px;
-  font-weight: bold;
+  font-weight: 700;
   padding: 5px 15%;
   text-align: center;
   background-color: #de523f;
   border-radius: 8px;
-  color: #FAFAFA;
+  /* color: #FAFAFA; */
+  transition: all .6s;
+}
+
+.cardNoExtended:hover>p {
+  background-color: transparent;
 }
 
 .cardNoExtended>img {
-  height: 170px;
-  width: 170px;
+  height: 160px;
+  width: 160px;
   border-radius: 50%;
   object-fit: cover;
 }
@@ -56,7 +88,6 @@
 .cardExtended {
   display: none;
   text-align: left;
-  margin: 4%;
 }
 
 .card:hover>.cardExtended {
@@ -64,17 +95,19 @@
 }
 
 .cardExtended>h3 {
-  padding: 2px 0px;
+  /* padding: 2px 0px; */
   font-size: 16px;
   text-align: center;
-  background-color: #de523f;
+  /* background-color: #de523f; */
   border-radius: 8px;
-  color: #FAFAFA;
+  /* color: #FAFAFA; */
 }
 
 
 .cardExtended>ul {
   list-style: none;
+  margin: 10px 0 0;
+  padding: 0 10px;
 }
 
 .cardButton {
@@ -84,7 +117,7 @@
   cursor: pointer;
 }
 
-.cardButton>img {
+/* .cardButton>img {
   width: fit-content;
   height: fit-content;
   transition: all 200ms ease;
@@ -92,13 +125,13 @@
 
 .cardButton>img:hover {
   transform: scale(1.3);
-}
+} */
 
 .arrow {
   rotate: 90deg;
 }
 
-@media (max-width: 500px){
+/* @media (max-width: 500px){
   .card {
     padding: 15px 15px 15px 70px;
   }
@@ -110,5 +143,5 @@
     height: 140px;
     width: 140px;
   }
-}
+} */
 
