--- a/src/containers/pages/Home/styles.module.css
+++ b/src/containers/pages/Home/styles.module.css
@@ -264,7 +264,7 @@
 
 .adopciones {
   background-color: #000;
-  margin: 2rem 0;
+  /* margin: 2rem 0; */
   padding: 2rem 0;
   position: relative;
 }
@@ -294,7 +294,7 @@
 
 .publicacion-destacada {
   text-align: center;
-  margin: 1.6rem 0;
+  margin: 2rem 0 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -309,7 +309,7 @@
   justify-content: space-evenly;
   flex-wrap: wrap;
   gap: 6rem;
-  padding: 3rem 0 0.2rem;
+  padding: 2.2rem 0 0;
 }
 
 .publicacion-destacada__buttons>button {
