--- a/src/components/LetraTitulo/styles.module.css
+++ b/src/components/LetraTitulo/styles.module.css
@@ -7,7 +7,7 @@
 .letra-titulo {
 	font-family: 'Roboto',sans-serif/*letra-titulo*/ /*'Roboto',sans-serif*/;
 	font-size: 2.25rem;
-	margin: 15px;
+	margin: 0;
 	/* padding-bottom: .8rem; */
 	min-width: 11rem;
 	user-select: none;
