--- a/src/containers/pages/Home/sliderHeader.css
+++ b/src/containers/pages/Home/sliderHeader.css
@@ -1,3 +1,16 @@
+.slide {
+  -webkit-transform: scale(1);
+            transform: scale(1);
+  opacity: 1;
+  transition: all 0.5s ease-out;
+}
+
+.slide.active {
+  -webkit-transform: scale(0.6);
+          transform: scale(0.6);
+  opacity: 0;
+}
+
 .button__bar {
   width: 100%;
   position: absolute;
