--- a/src/containers/pages/Home/styles.module.css
+++ b/src/containers/pages/Home/styles.module.css
@@ -16,6 +16,7 @@
   height: calc(100vh - 5rem);
   object-fit: cover;
   opacity: 0.8;
+  margin-left: 200px;
 }
 
 /* slider__img--two y three son las imagenes del slider que llevan estilos diferentes a la primer imagen */
@@ -27,11 +28,15 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 2rem;
-  margin: 0;
-  padding-left: 160px;
+  -webkit-clip-path: polygon(0 0, 52% 0, 44% 100%, 0% 100%);
+  clip-path: polygon(0 0, 52% 0, 44% 100%, 0% 100%);
+  /* background-color: #0a0a0a; */
+  background-color: #000;
+  width: 100%;
+  height: calc(100vh - 5rem);
   position: absolute;
-  top: 220px;
+  top: 0;
+  padding: 0 120px 0 0;
 }
 
 .header__logo {
@@ -45,6 +50,7 @@
                .8px -.8px 0 #000, 
                -.8px .8px 0 #000, 
                .8px .8px 0 #000;
+  text-align: center;
 }
 
 .header__buttons {
@@ -116,7 +122,7 @@
 }
 @media (max-width: 1250px){
   .header__section {
-    padding-left: 100px;
+    padding-right: 200px;
   }
   .header__logo {
     width: 500px;
@@ -159,6 +165,9 @@
     left: 50%;
     transform: translateX(-50%);
   }
+  .header__slider--img {
+    margin: 0;
+  }
 
   .slider__img--two {
     margin: 0px;
@@ -181,6 +190,11 @@
   }
 
   .header__slider--overlay {
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+    background-color: transparent;
+  }
+  .header__section {
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
     background-color: transparent;
