--- a/src/containers/pages/Adoptar/styles.module.css
+++ b/src/containers/pages/Adoptar/styles.module.css
@@ -7,11 +7,10 @@
 	position: relative;
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
+	justify-content: center;
 	align-items: center;
-	gap: 30px 0;
-	margin-left: 1%;
-	margin-right: 1%;
+	gap: 30px 80px;
+	margin: 0 20px;
 	font-family: 'Roboto';
 	font-style: normal;
 	font-weight: 500;
@@ -34,6 +33,11 @@
 		display: grid;
 		grid-template-columns: 100%;
 		place-items: center;
+	}
+}
+@media (max-width: 500px){
+	.adoptarTarjeta__container {
+		margin: 0px;
 	}
 }
 
