--- a/frontend/src/containers/pages/Blog/styles.module.css
+++ b/frontend/src/containers/pages/Blog/styles.module.css
@@ -11,13 +11,27 @@
 }
 
 .blog__card {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
   padding: 30px;
   gap: 40px;
-  justify-content: center;
 }
 
+@media (max-width: 1700px){
+  .blog__card {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media (max-width: 1300px){
+  .blog__card {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 750px){
+  .blog__card {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
 @media (max-width: 960px){
   .blog__container {
     padding: 30px 0;
