--- a/frontend/src/containers/pages/Blogs/styles.module.css
+++ b/frontend/src/containers/pages/Blogs/styles.module.css
@@ -1,9 +1,9 @@
 .blogs__container {
-  margin: 120px;
+  margin: 60px 120px 120px;
 }
 
 .blogsData__container {
-  margin: 0 200px;
+  margin: 0 100px;
   margin-top: 80px;
 }
 
