--- a/frontend/src/containers/pages/Blogs/components/Posts/styles.module.css
+++ b/frontend/src/containers/pages/Blogs/components/Posts/styles.module.css
@@ -5,25 +5,30 @@
 .postsRelacionados__container>h4 {
   font-family: 'Arial';
   font-style: normal;
-  font-weight: 900;
-  font-size: 20px;
+  font-weight: 700;
+  font-size: 22px;
   line-height: 30px;
   letter-spacing: 0.05em;
 }
 
 .postsRelacionados__card {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 100px;
 }
 
 
 .postsRelacionadosCard__container {
-  width: 250px;
+  width: 300px;
   background-color: #D9D9D9;
+  border-radius: 2px;
+  cursor: pointer;
 }
 
 .postsRelacionadosCard__container>img {
-  width: 250px;
+  width: 300px;
+  min-height: 200px;
+  max-height: 200px;
   object-fit: cover;
 }
 
@@ -53,6 +58,10 @@
   color: #21273A;
 }
 
-.postsRelacionadosCard__container>div {
-  padding: 20px;
+.postsRelacionadosCard__data {
+  padding: 4px 20px 10px;
 }
+
+/* .postsRelacionadosCard__container>div {
+  padding: 20px;
+} */
