--- a/frontend/src/containers/pages/Blogs/components/Subtitulos/styles.module.css
+++ b/frontend/src/containers/pages/Blogs/components/Subtitulos/styles.module.css
@@ -1,11 +1,11 @@
 .blogsSubtitulos {
 	font-family: 'Arial';
 	font-style: normal;
-	font-weight: 900;
-	font-size: 20px;
+	font-weight: 700;
+	font-size: 26px;
 	line-height: 30px;
 	letter-spacing: 0.05em;
 	color: #21273a;
   text-align: center;
-  margin: 50px 0;
+  margin: 50px 0 -20px;
 }
