--- a/frontend/src/containers/pages/Blogs/components/Portada/styles.module.css
+++ b/frontend/src/containers/pages/Blogs/components/Portada/styles.module.css
@@ -1,7 +1,7 @@
 .blogsPortada__container {
 	position: relative;
-	height: 250px;
-	background-position: center;
+	height: 400px;
+	background-position: 50% 30%;
 	background-repeat: no-repeat;
 	background-size: cover;
 	margin-top: 40px;
